<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shooting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/chronometer" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textViewNumShots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chronometer1"
        android:onClick="startShooting"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonStandBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chronometer1"
        android:layout_centerHorizontal="true"
        android:onClick="standBy"
        android:text="@string/standBy" />

    <Button
        android:id="@+id/buttonShot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chronometer1"
        android:onClick="ShotWasFired"
        android:text="@string/Shot" />

    <ListView
        android:id="@+id/listViewShots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonStop"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonStart" >
    </ListView>

    <Button
        android:id="@+id/ButtonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="stopShooting"
        android:text="@string/stop" />

    <Button
        android:id="@+id/ButtonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="resetShooting"
        android:text="@string/reset" />
</RelativeLayout>